app/assets/stylesheets/application.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or vendor/assets/stylesheets of plugins, if any, can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any styles
 * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
 * file per style scope.
 *
 *= require_tree .
 *= require_self
 *= require jquery-ui
 */

@import "materialize/components/color";
$primary-color: color("grey", "darken-3") !default;
$secondary-color: color("green", "accent-4") !default;
@import "materialize", "https://fonts.googleapis.com/icon?family=Material+Icons";

body {
  background: color("grey", "lighten-3");
}


nav {
  background-color: lighten(black,12%);
}

.button-collapse:hover {
  cursor: pointer;
}

.hero {
  background: linear-gradient(rgba(15,0,0,.25), rgba(5,0,0,.75)), url('rocket-launch.jpeg') no-repeat top center;
  background-size: cover;
  height: 92vh;
  h1, h3, h5 {
    color: rgba(white,.9);
  }
}


::selection {
  background: color("green", "accent-1");
  color: white;
}

.error {
  color: red;
}

.video-links {
  border: none;
}

.collection a.collection-item {
  color: rgba(0,0,0,.87);
}

.close-modal-button {
  padding: .5em;
  a {
    @extend .grey-text, .text-lighten-2;
    transition: .3s ease-out;
    &:hover {
      cursor: pointer;
      @extend .grey-text, .text-lighten-1;
    }
  }
}

.footer-links > li > a {
  @extend .white-text;
}

.video-list > li > .row, .video-list > li > a > .row, #playlist-list > li > .row {
  @extend .white, .grey-text, .text-darken-2;
  transition: .3s ease-out;
  &:hover {
    @extend .grey-text, .text-darken-4;
    .list-action > i, .new-video-button, .play-video-button {
      @extend .grey-text, .text-lighten-1;
      transition: .3s ease-out;
      &:hover {
        @extend .green-text, .text-accent-4;
      }
    }
  }
  &:active, &:focus {
    .play-video-button {
      @extend .green-text, .text-accent-4;
    }
  }
}

.list-action > i {
  @extend .grey-text, .text-lighten-2;
  transition: .3s ease-out;
  &:hover {
    cursor: move;
  }
}

.new-video-button, .play-video-button {
  @extend .grey-text, .text-lighten-2;
  transition: .3s ease-out;
}

.fixed-action-btn.horizontal {
  position: static;
  ul {
    position: static;
    transform: translateY(0);
    margin-right: .5em;
    li {
      margin: .75em .5em 0 0;
    }
  }
}

@media #{$small-and-down} {
  .modal {
    max-height: 90%;
    max-width: 70%;
    margin: 0;
  }
}

